DONE - UI updated, fixed a bug that summary font size is too small.

--- a/css/admin-monthly-statistic.css
+++ b/css/admin-monthly-statistic.css
@@ -1,7 +1,7 @@
 .sum * {
   font-weight: bold;
   color: blue;
-  font-size: 20px;
+  font-size: 1.2rem;
 }
 
 .last-month-title, .show-year, .show-month {
